fix: Title cut if Description too tall of .projecttitle

--- a/public/css/_projectCards.scss
+++ b/public/css/_projectCards.scss
@@ -48,7 +48,8 @@
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    height: 60%;
+    //height: 60%;
+    padding: 1vh;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
