--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6054,9 +6054,8 @@ textarea {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 36vh;
-  margin-right: 2vh;
-  margin-left: 2vh;
+  min-height: 36vh;
+  margin: 2vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -6090,7 +6089,7 @@ textarea {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    height: 60%;
+    padding: 1vh;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -6132,7 +6131,6 @@ textarea {
       display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      height: 45%;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -webkit-flex-direction: column;
